2011-06-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, lib/oci8/oci8.rb: fix for Psych YAML library.
	* ext/oci8/extconf.rb, ext/oci8/oci8.h, ext/oci8/ocihandle.c: fix to
	    work with ruby 1.9.3dev.

2011-06-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: prevent GC on failed-logon connections from freeing
	    alive connections when the service context handle addresses are
	    accidentally same.
	* ext/oci8/ocidatetime.c: raise "OCIError: ORA-01805: possible error in
	    date/time operation" when Oracle 11gR2's client and server timezone versions
	    are not same instead of raising a exception "undefined method `*' for
	    nil:NilClass." This is a temporary fix.
	    See: http://rubyforge.org/forum/forum.php?thread_id=49102&forum_id=1078

2011-06-10  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/oci8.h: Free OCI error handles on the
	    native thread termination, not on the ruby thread termination.
	    (reported by Jordan Curzon and Aaron Qian)
	    See: http://rubyforge.org/forum/forum.php?thread_id=49751&forum_id=1078

2011-02-21  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c, ext/oci8/metadata.c, ext/oci8/oci8.c,
	  ext/oci8/oci8.h, ext/oci8/oci8lib.c, ext/oci8/stmt.c:
	    fix segmentation fault when calling OCI8::Cursor#[] for
	    closed statement object's (reported by Hugo L. Borges)

2011-02-01  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/ocidatetime.c, lib/oci8/datetime.rb: rename
	    the name of the class to binding timestamp with time zone
	    from OCITimestamp to OCITimestampTZ. OCITimestamp will be
	    used for timestamp without time zone.

2011-01-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: check Oracle client's cpu type on Solaris as
	    on Linux and Mac OS X. change error messages on Mac OS X to suggest
	    to set RC_ARCHS=x86_64 when mkmf.log contains messages such as
	    'missing required architecture i386 in file.'

2010-12-26  KUBO Takehiro  <kubo@jiubao.org>