@@ -115,6 +115,7 @@ have_func("rb_errinfo", "ruby.h")  # ruby 1.9
 have_type("rb_blocking_function_t", "ruby.h")
 have_func("rb_set_end_proc", "ruby.h")
 have_func("rb_class_superclass", "ruby.h")
+have_func("rb_thread_blocking_region", "ruby.h")
 
 # replace files
 replace = {
